tests/baselines/reference/moduleAugmentationEnumClassMergeOfReexportIsError.errors.txt
tests/cases/compiler/augment.ts(4,17): error TS2567: Enum declarations can only merge with namespace or other enum declarations.
tests/cases/compiler/file.ts(1,14): error TS2567: Enum declarations can only merge with namespace or other enum declarations.


==== tests/cases/compiler/file.ts (1 errors) ====
    export class Foo {
                 ~~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
!!! related TS6203 tests/cases/compiler/augment.ts:4:17: 'Foo' was also declared here.
        member: string;
    }
==== tests/cases/compiler/reexport.ts (0 errors) ====
    export * from "./file";
==== tests/cases/compiler/augment.ts (1 errors) ====
    import * as ns from "./reexport";
    
    declare module "./reexport" {
        export enum Foo {
                    ~~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
!!! related TS6203 tests/cases/compiler/file.ts:1:14: 'Foo' was also declared here.
            A, B, C
        }
    }
    
    declare const f: ns.Foo; //is this the enum or the class? should be an error.
    